# midicsv-cmake

./: CMakeLists.txt  README.md
cmake/: MidiCSVConfig.cmake  MidiCSVConfig.h.in  MidiCSVConfigVersion.cmake.in
docs/: midicsv-5.txt
gh-pages/master/: CMakeLists.txt
gh-pages/master/cmake/: MidiCSVConfigVersion.cmake.in
gh-pages/master/legacy/Win32/: Midicsv.vcproj
gh-pages/master/test/src/: CMakeLists.txt  testcrc32.cpp
legacy/Win32/: Csvmidi.vcproj  Midicsv.vcproj
master/cmake/: MidiCSVConfig.h.in
master/docs/: csvmidi-1.txt  midicsv-1.txt  midicsv.fourmilab.txt
master/legacy/Win32/: Csvmidi.vcproj
master/test/: CMakeLists.txt.sample
master/test/src/: crc32_func.cpp  crc32_sample.cpp
src/: CMakeLists.txt
test/: CMakeLists.txt
test/resource/: W32test.bat
test/src/: CMakeLists.txt  testcrc32.cpp
